--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2"
